fix: [CDS-41429]: fix button alignment (#10466)

--- a/src/modules/75-cd/components/PipelineSteps/DeployServiceStep/DeployServiceStep.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/DeployServiceStep/DeployServiceStep.module.scss
@@ -18,7 +18,7 @@
       margin-bottom: 0px !important;
     }
   }
-  > button {
+  .serviceActionWrapper {
     margin-top: 25px !important;
   }
 }
